<resources>
    <string name="app_name">S.H.I.E.L.D. Avenger Locator</string>
    <string name="shield_app_header">S.H.I.E.L.D. Avenger Locator</string>
    <string name="shield_logo_description">S.H.I.E.L.D. logo</string>
    <string name="iron_man">Iron Man</string>
    <string name="captain_america">Captain America</string>
    <string name="thor">God of Thunder</string>
    <string name="black_widow">Black Widow</string>
    <string name="hawkeye">Hawkeye</string>
    <string name="hulk">Hulk</string>
    <string name="doctor_strange">Doctor Strange</string>
    <string name="black_panther">Black Panther</string>
    <string name="spider_man">Spiderman</string>
    <string name="captain_marvel">Captain Marvel</string>
</resources>