<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_height="wrap_content"
    android:layout_width="fill_parent"
    android:gravity="center_horizontal"
    >
    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        tools:context=".MainActivity"
        android:orientation="vertical"
        android:gravity="center_horizontal"
        android:paddingTop="50dp"
        android:paddingBottom="50dp"
        android:background="@color/white">

            <ImageView
                android:id="@+id/imageView2"
                android:layout_width="355dp"
                android:layout_height="266dp"
                app:srcCompat="@drawable/shield"
                android:contentDescription="@string/shield_logo_description"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:orientation="vertical"
            android:paddingTop="10dp">

            <TextView
                android:id="@+id/textView2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingBottom="10dp"
                android:text="@string/shield_app_header"
                android:textStyle="bold" />

            <Button
                android:id="@+id/avenger_button_1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/maroon"
                android:text="@string/captain_america" />

            <Button
                android:id="@+id/avenger_button_2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/maroon"
                android:text="@string/hulk" />

            <Button
                android:id="@+id/avenger_button_3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/maroon"
                android:text="@string/thor" />

            <Button
                android:id="@+id/avenger_button_4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/maroon"
                android:text="@string/black_widow" />

            <Button
                android:id="@+id/avenger_button_5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/maroon"
                android:text="@string/doctor_strange" />

            <Button
                android:id="@+id/avenger_button_6"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/maroon"
                android:text="@string/iron_man" />

            <Button
                android:id="@+id/avenger_button_7"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/maroon"
                android:text="@string/black_panther" />

            <Button
                android:id="@+id/avenger_button_8"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/maroon"
                android:text="@string/hawkeye" />

            <Button
                android:id="@+id/avenger_button_9"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/maroon"
                android:text="@string/spider_man" />

            <Button
                android:id="@+id/avenger_button_10"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/maroon"
                android:text="@string/captain_marvel" />

        </LinearLayout>
    </LinearLayout>
</ScrollView>